# Google-Quest-QA-Ensemble

./: GPU_SETUP.md  QUICKSTART_UV.md  README.md  SETUP_GUIDE_UV.md  gitignore.txt  pyproject.toml  requirements.txt
data/: DATA_README.md
ensemble/: step1_generate_oof.py  step2_optimize_weights.py  step3_train_stacker.py  step4_inference_kaggle.py
inference/: inference_V1.py  inference_V2.py  inference_local.py
oof_data/: oof_deberta.npy  oof_mamba.npy  oof_roberta.npy  oof_targets.npy
training/: Part_A.py  Part_B.py  Part_C_Deberta.py  Part_C_Roberta.py  Part_C_mamba.py  Part_C_mamba2.py  Part_C_mamba2_1_3b.py
utils/: Pose_processing_check.py
