[project]
name = "google-quest-qa-ensemble"
version = "1.0.0"
description = "Adaptive multi-model ensemble for Google QUEST Q&A Labeling"
requires-python = ">=3.10"

dependencies = [
    # Core Deep Learning (with CUDA support)
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchaudio>=2.0.0",
    
    # Transformers and NLP
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "datasets>=2.12.0",
    "sentencepiece>=0.1.99",
    "accelerate>=0.20.0",
    
    # Mamba (State Space Models)
    "mamba-ssm>=1.0.0",
    "causal-conv1d>=1.0.0",
    
    # 8-bit optimization
    "bitsandbytes>=0.41.0",
    
    # Scientific Computing
    "numpy>=1.24.0,<2.0.0",
    "pandas>=1.5.0",
    "scipy>=1.10.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    
    # Hyperparameter Optimization
    "optuna>=3.0.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Additional utilities
    "einops>=0.6.0",
    "triton>=2.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
]

# ==========================================
# PyTorch CUDA Support
# ==========================================
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]